kubernetes/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kardex-service
  namespace: sicei
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kardex-service
  template:
    metadata:
      labels:
        app: kardex-service
      namespace: sicei
    spec:
      containers:
        - image: nexus-repository.abrahamespinosa.dev/sicei/kardex-service:latest
          imagePullPolicy: Always
          name: kardex-service
          ports:
            - containerPort: 8080
              name: service-port
              protocol: TCP
      imagePullSecrets:
        - name: nexus-repository-credentials
