kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kardex-service-cluster-ip
  namespace: sicei
spec:
  ports:
    - name: service-port
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: kardex-service
  type: ClusterIP
